--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>SKUNKS</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
   </head>
   <body>
     <h3>Never mess with a skunk!</h3>
